# template-helper

./: .gitignore  README.markdown  language-haskell-extract.cabal  template-helper.cabal
src/: TemplateHelper.hs  TemplateHelperTest.hs
src/Language/Haskell/: Extract.hs  TestExtract.hs
tests/: TestExtract.hs
tests/Language/Haskell/: ExtensionTest.hs  LocationTest.hs
